crates/lang/tests/ui/contract/fail/config-keep-attr-missing-arg.rs
use ink_lang as ink;

#[ink::contract(keep_attr)]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self) {}
    }
}

fn main() {}
